--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,26 +1,12 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-			crossorigin="anonymous"
-		/>
-		<title>Yodlr Design Challenge</title>
-	</head>
-	<body>
-		<h1>Yodlr Design Challenge</h1>
-		<p>
-			<a href="/signup.html">Registration Page</a><br />
-			<a href="/admin.html">Admin Page</a>
-		</p>
+{% extends "base.html" %}
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-			crossorigin="anonymous"
-		></script>
-	</body>
-</html>
+{% block header %}
+Yodlr Design Challenge
+{% endblock %}
+
+{% block body %}
+<p>
+    Please <a href="/signup.html">Click Here</a> to register.</br>
+    <a href="/admin.html">Admin?</a>
+</p>
+{% endblock %}
