added static file

--- a/public/views/admin.html
+++ b/public/views/admin.html
@@ -1,5 +1,3 @@
-{% extends "base.html" %}
-
-{% block header %}
+{% extends "base.html" %} {% block header %}
 <h1>List user data here</h1>
 {% endblock %}
