--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,12 +1,12 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% block header %}
-Yodlr Design Challenge
+<h1>Yodlr Design Challenge</h1>
 {% endblock %}
 
 {% block body %}
-<p>
+<p class="text-center">
     Please <a href="/signup.html">Click Here</a> to register.</br>
-    <a href="/admin.html">Admin?</a>
+    <a class="mt-5" href="/admin.html">Admin?</a>
 </p>
 {% endblock %}
