--- a/public/views/index.html
+++ b/public/views/index.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 
 {% block header %}
-<h1>Yodlr Design Challenge</h1>
+<h1 class="text-center">Yodlr Design Challenge</h1>
 {% endblock %}
 
 {% block body %}
-<p class="text-center">
-    Please <a href="/signup.html">Click Here</a> to register.</br>
-    <a class="mt-5" href="/admin.html">Admin?</a>
+<p class="text-center mt-5">
+    Please <a href="/signup">Click Here</a> to register.</br>
+    <a class="mt-5" href="/admin">Admin?</a>
 </p>
 {% endblock %}
